[ADD] Implement fixed navbar and enhance theme service: update navbar position, set default dark mode, and adjust styles for projects section

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,4 +13,11 @@
   flex: 1;
 }
 
+app-navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+}
 
